--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: '是但求其爱'
-subtitle: '爱七色五味多纷陈，更多灰尘，落入五蕴'
-description: ''
+subtitle: '爱七色五味多纷陈'
+description: '一个开放式关系实践者的博客'
 keywords: ['Love', 'Open Relationship']
 author: Abelard
 language: zh-CN
